Try to fix linux pdf opening again (#5945)
* Try to fix linux pdf opening again

* execute stream gobbler in own task

* add to other open method as well

* use process builder and close reader